knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Client_Change_Management__c/Client_Change_Management__c.object-meta.xml
<CustomObject>
    <label>Client Change Management</label>
    <nameField>
        <displayFormat>CCM-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Change Managements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>