knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Client_Change_Management__c/fields/Canceled_Reason__c.field-meta.xml
<CustomField>
    <fullName>Canceled_Reason__c</fullName>
    <label>Canceled Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>