knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Client_Change_Management__c/fields/Client_Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Client_Contract_Start_Date__c</fullName>
    <formula>Contract__r.StartDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Contract Start Date</label>
    <type>Date</type>
</CustomField>