knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Client_Change_Management__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Client Change Managements</relationshipLabel>
    <relationshipName>Client_Change_Managements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>