knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Client_Change_Management__c/fields/Healthcare_Practitioner_Facility__c.field-meta.xml
<CustomField>
    <fullName>Healthcare_Practitioner_Facility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Healthcare Practitioner Facility</label>
    <referenceTo>HealthcarePractitionerFacility</referenceTo>
    <relationshipLabel>Client Change Managements</relationshipLabel>
    <relationshipName>Client_Change_Managements</relationshipName>
    <type>Lookup</type>
</CustomField>