knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Client_Change_Management__c/fields/Practice_Operation_Change__c.field-meta.xml
<CustomField>
    <fullName>Practice_Operation_Change__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Practice Operation Change</label>
    <referenceTo>Practice_Operation_Change__c</referenceTo>
    <relationshipLabel>Client Change Managements</relationshipLabel>
    <relationshipName>Client_Change_Managements</relationshipName>
    <type>Lookup</type>
</CustomField>